--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             </div>
 			
 <!--------------------------->
-    <div class="row">
+   <!-- <div class="row">
 
           <div class="col-md-4">
             <div class="work-box">
@@ -517,7 +517,7 @@
                     <h2 class="w-title">AUTOENCODER <br>-  Detecção de Anomalias / Fraude <br>- Remoção de Ruido / Redução de Dimensão</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Machine Learning / Redes Neurais</span> / <span class="w-date">24/04/2022</span>
-					  <!--<p class="subtitle-a"> -->
+					  
 					  <p class="lead">
                       A arquitetura do autoencoder se baseia no aprendizado de caracteristicas de entrada, que devem estar presentes na saida.<br>
                     </p>
@@ -526,13 +526,13 @@
                   <div class="col-sm-4">
                     <div class="w-like">
                       <a href="https://colab.research.google.com/github/silviolima07/autoencoders/blob/main/Autoencoder.ipynb"><span class="ion-ios-plus-outline"></span></a>
-					  <!--<a href="https://app-imoveis.herokuapp.com/"> <span class="ion-ios-plus-outline"></span></a>-->
+					  
                     </div>
                   </div>
             </div>
           </div>
          </div>
-        </div>			
+        </div>		-->	
 <!--------------------------->
 
           <div class="col-md-4">
