--- a/index.html
+++ b/index.html
@@ -534,7 +534,8 @@
          </div>
         </div>		-->	
 <!--------------------------->
-
+        <div class="row">
+		
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/images/webscrap.png" data-gall="portfolioGallery" class="venobox">
