--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Nome: </span> <span>Silvio César De Lima</span></p>
-                        <p><span class="title-s">Profile: </span> <span><br>Analista de Dados <br> Business Intelligence</span></p>
+                        <p><span class="title-s">Profile: </span> <span><br>Cientista de Dados <br>Analista de Dados</span></p>
                         <p><span class="title-s">Email: </span> <span>silviolima07@gmail.com</span></p>
                         <p><span class="title-s">Fone: </span> <span>(+55)1299646-2527</span></p>
                       </div>
@@ -127,7 +127,7 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Deploy: Streamlit / Shiny / Flask</span> <span class="pull-right">90%</span>
+                    <span>Deploy</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -151,10 +151,11 @@
 		      <p class="lead">  
 		      Experiência com <b>Unix e Linux</b>.<br>
                       Linguagens:<br><b>Python, R e SQL</b>.<br>
-                      Experiência em análise de dados com:<br><b> Weka, Jupyter Notebook, RStudio e Google Colab</b>.<br>
-                      Visualização de dados com:<br><b> Tableau, QlikView, Qlik Sense e Power BI</b>.<br>
+                      Experiência em análise de dados com:<br><b>Jupyter Notebook, RStudio e Google Colab</b>.<br>
+                      Visualização de dados com:<br><b> Tableau e Power BI</b>.<br>
                       Deploy de Web apps com:<br><b> R / Shiny e Python / Streamlit / Flask</b>.<br>
                       Algoritmos de Machine Learning com:<br> <b>R e Python</b>.<br>
+					  Serviços AWS: <b>EC2, S3, Athena, Sagemaker e outros</b>.<br>
 		     </p>  
                      <p class="lead">
                       Busco uma oportunidade para iniciar em Data Science. <br>
