--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
                       Visualização de dados com:<br><b> Tableau e Power BI</b>.<br>
                       Deploy de Web apps com:<br><b> R / Shiny e Python / Streamlit / Flask</b>.<br>
                       Algoritmos de Machine Learning com:<br> <b>R e Python</b>.<br>
-					  Serviços AWS: <b>EC2, S3, Athena, Sagemaker e outros</b>.<br>
+					  Serviços AWS:<br><b>EC2, S3, Athena, Sagemaker e outros</b>.<br>
 		     </p>  
                      <p class="lead">
-                      Busco uma oportunidade para iniciar em Data Science. <br>
-					  Aplicar os conhecimentos em análise de dados para tomada de decisão.<br> 
+                      <b>Busco uma oportunidade para iniciar em Data Science.</b> <br>
+					  <b>Aplicar os conhecimentos em análise de dados para tomada de decisão.</b><br> 
                       <br>
                       Conclui em Janeiro de 2020 a <b>Formação Cientista de Dados na Data Sciency Academy - DSA</b>.<br>
                       Iniciei em Fevereiro, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
