--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                       Conclui em Janeiro de 2020 a <b>Formação Cientista de Dados na Data Sciency Academy - DSA</b>.<br>
                       Conclui em Junho de 2022, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
 		      <br>
-		     Conquistas até o momento em 2020:<br><b> Badge Analista Tableau, Codenation em Data Science, Bootcamp Machine Learning IGTI e diversos cursos</b>.<br>
+		     Certificações:</b>
+			 AWS Cloud Practitioner.<br>
                     </p>
                   </div>
                 </div>
@@ -362,7 +363,34 @@
           </div>
         </div>
       		
+<!--------------------------->
 
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Caged - dados de empregos formais no Brasil</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">20/10/2022</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Web scrap de dados do site do Caged usando Python.<br>
+					  Dados são salvos num bucket e posteriormente copiados para um cluster do Redshift.
+					  As tabelas geradas são lidas pelo Metabase, que gera um dashboard apresentando os dados.<br>
+					  <strong>Tools: Python, GitHub Action, S3, Redshift e Metabase.</strong>
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "700" controls>
+                     <source src="assets/video/Caged.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
 <!--------------------------->
 
            <div class="work-content">
