--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                       Conclui em Junho de 2022, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
 		      <br>
 		     Certificações:</b>
-			 AWS Cloud Practitioner.<br>
+			 <strong>AWS Cloud Practitioner.</strong><br>
                     </p>
                   </div>
                 </div>
