--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                       Conclui em Janeiro de 2020 a <b>Formação Cientista de Dados na Data Sciency Academy - DSA</b>.<br>
                       Conclui em Junho de 2022, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
 		      <br>
-		     Certificações:</b>
+		     Certificações:<br>
 			 <strong>AWS Cloud Practitioner.</strong><br>
                     </p>
                   </div>
