--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
                       Conclui em Janeiro de 2020 a <b>Formação Cientista de Dados na Data Sciency Academy - DSA</b>.<br>
                       Conclui em Junho de 2022, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
 		      <br>
+			 Treinamentos recentes:<br>
+			 <strong>Bootcamp de Engenheria de Dados pela HowEdu em Agosto de 2022.</strong>
 		     Certificações:<br>
 			 <strong>AWS Cloud Practitioner.</strong><br>
                     </p>
