--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                       Conclui em Junho de 2022, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
 		      <br>
 			 Treinamentos recentes:<br>
-			 <strong>Bootcamp de Engenheria de Dados pela HowEdu em Agosto de 2022.</strong>
+			 <strong>Bootcamp de Engenheria de Dados pela HowEdu em Agosto de 2022.</strong><br>
 		     Certificações:<br>
 			 <strong>AWS Cloud Practitioner.</strong><br>
                     </p>
