--- a/index.html
+++ b/index.html
@@ -365,7 +365,36 @@
             </div>
           </div>
         </div>
-      		
+ 
+
+<!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Criar contas de usuários via script na AWS</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">20/12/2022</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Foram criados 5 grupos para administrar as permissões dos usuários.<br>
+					  Dentro do CloudShell na AWS, foi executado o script bash que cria o usuário no seu respectivo grupo.<br>
+					  <strong>Tools: Bash, CloudShell, IAM.</strong>
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "700" controls>
+                     <source src="assets/video/criar_user.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
+ 
 <!--------------------------->
 
            <div class="work-content">
