--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <div class="work-box">
                 <div class="work-img">
                   <video width="1100" height= "700" controls>
-                     <source src="assets/video/criar_user.mp4" type="video/mp4">
+                     <source src="assets/video/criar_user02.mp4" type="video/mp4">
                      Browser não suporta o tipo do video.
                   </video>
                 </div>
