Migracao de aplicacao

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Silvio Lima</h>
-		  <p class="intro-subtitle"><span class="text-slider-items">Cientista de Dados / Analista de Dados</span><strong class="text-slider"></strong></p>
+		  <p class="intro-subtitle"><span class="text-slider-items">Cientista de Dados / Analista de Dados / Engenheiro de Dados</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -107,7 +107,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Nome: </span> <span>Silvio César De Lima</span></p>
-                        <p><span class="title-s">Profile: </span> <span><br>Cientista de Dados <br>Analista de Dados</span></p>
+                        <p><span class="title-s">Profile: </span> <span><br>Cientista de Dados <br>Analista de Dados <br> Engenheiro de Dados</span></p>
                         <p><span class="title-s">Email: </span> <span>silviolima07@gmail.com</span></p>
                         <p><span class="title-s">Fone: </span> <span>(+55)1299646-2527</span></p>
                       </div>
@@ -366,6 +366,34 @@
           </div>
         </div>
  
+
+<!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Migração de aplicação on premise para cloud</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">25/01/2023</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Uma aplicação, Wiki, rodando localmente foi migrada para execução na AWS.<br>
+					  Foi feito o planejamento do projeto, os recursos foram provisionados e a migração concluida com sucesso.<br>
+					  <strong>Serviços: EC2, RDS, VPN, Subnet e Internet Gateway.</strong>
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "700" controls>
+                     <source src="assets/video/migracao_app04.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
 
 <!--------------------------->
 
