--- a/index.html
+++ b/index.html
@@ -366,6 +366,33 @@
           </div>
         </div>
  
+<!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Execução de comandos em servidores na cloud</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">08/02/2023</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Dois servidores precisavam ser atualizados com agentes de segurança.<br>
+					  O Terraform foi configurado para criação da infraestrutura e o System Manager aplicou a atualização em cada instância criada.<br>
+					  <strong>Serviços: EC2, IAM, System Manager, SNS e Terraform.</strong>
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "700" controls>
+                     <source src="assets/video/Terraform3.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
 
 <!--------------------------->
 
