--- a/index.html
+++ b/index.html
@@ -366,6 +366,36 @@
           </div>
         </div>
  
+ <!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">MVP de um E-commerce</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">18/02/2023</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Construção de um MVP de um site de e-commerce.<br>
+					  O Terraform e o Ansible foi usado nesse projeto.<br>
+					  O Magento foi a base de construção do site.<br>
+					  <strong>Serviços: EC2, IAM, Terraform, Ansible e Magento.</strong>
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "800" controls>
+                     <source src="assets/video/Magento5.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
+
+ 
 <!--------------------------->
 
            <div class="work-content">
