--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
 
             <div class="work-box">
                 <div class="work-img">
-                  <video width="1100" height= "800" controls>
-                     <source src="assets/video/Magento5.mp4" type="video/mp4">
+                  <video width="1000" height= "800" controls>
+                     <source src="assets/video/magento05.mp4" type="video/mp4">
                      Browser não suporta o tipo do video.
                   </video>
                 </div>
