--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Nome: </span> <span>Silvio César De Lima</span></p>
-                        <p><span class="title-s">Profile: </span> <span><br>Cientista de Dados <br>Analista de Dados <br> Engenheiro de Dados</span></p>
+                        <p><span class="title-s">Profile: </span> <span><br>Cientista de Dados <br>Engenheiro de Dados <br> Engenheiro Cloud</span></p>
                         <p><span class="title-s">Email: </span> <span>silviolima07@gmail.com</span></p>
                         <p><span class="title-s">Fone: </span> <span>(+55)1299646-2527</span></p>
                       </div>
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skill</p>
+                    <p class="title-s">Habilidades</p>
                     <span>Python</span> <span class="pull-right">90%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -167,8 +167,9 @@
                       Conclui em Janeiro de 2020 a <b>Formação Cientista de Dados na Data Sciency Academy - DSA</b>.<br>
                       Conclui em Junho de 2022, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
 		      <br>
-			 Treinamentos recentes:<br>
-			 <strong>Bootcamp de Engenheria de Dados pela HowEdu em Agosto de 2022.</strong><br>
+			 Treinamentos:<br>
+			 <strong>Bootcamp de Engenheria de Dados pela HowEdu - 08/2022 a 10/2022</strong><br>
+			 <strong>Bootcamp MultiCloud (AWS | Azure | GCP) pela TheCloudBootcamp - cursando</strong>
 		     <br>
 			 Certificações:<br>
 			 <strong>AWS Cloud Practitioner.</strong><br>
