--- a/index.html
+++ b/index.html
@@ -161,16 +161,15 @@
 					  Serviços AWS:<br><b>EC2, S3, Athena, Sagemaker e outros</b>.<br>
 		     </p>  
                      <p class="lead">
-                      <b>Busco uma oportunidade para iniciar em Data Science.</b> <br>
-					  <b>Aplicar os conhecimentos em análise de dados para tomada de decisão.</b><br> 
+                      <b>Busco uma oportunidade para iniciar carreira em Data Science e Cloud.</b> <br>
                       <br>
                       Conclui em Janeiro de 2020 a <b>Formação Cientista de Dados na Data Sciency Academy - DSA</b>.<br>
                       Conclui em Junho de 2022, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
 		      <br>
 			 Treinamentos:<br>
-			 <strong>Bootcamp de Engenheria de Dados pela HowEdu - 08/2022 a 10/2022</strong><br>
-			 <strong>Bootcamp MultiCloud (AWS | Azure | GCP) pela TheCloudBootcamp - cursando</strong>
-		     <br>
+			 <strong>Bootcamp de Engenharia de Dados </br>- pela HowEdu - 08/2022 a 10/2022</strong><br>
+			 <strong>Bootcamp MultiCloud (AWS | Azure | GCP)</br>- pela TheCloudBootcamp - cursando</strong>
+		     </br><br>
 			 Certificações:<br>
 			 <strong>AWS Cloud Practitioner.</strong><br>
                     </p>
