--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Stock & Prophet <br></h2>
+                    <h2 class="w-title">Stocks & Prophet <br></h2>
                     <div class="w-more">
                       <span class="w-ctegory">Machine Learning</span> / <span class="w-date">10/05/2023</span>
 					  
