--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
 
         <div class="work-content">
             <div class="work-box">
-              <a href="assets/images/logo_b3.png" data-gall="portfolioGallery" class="venobox">
+              <a href="assets/images/b3.png" data-gall="portfolioGallery" class="venobox">
                 <div class="work-img">
-                  <img src="assets/images/logo_b3.png" alt="" class="img-fluid">
+                  <img src="assets/images/b3.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
