--- a/index.html
+++ b/index.html
@@ -480,11 +480,11 @@
                       <span class="w-ctegory">Machine Learning</span> / <span class="w-date">02/05/2023</span>
 					  
 					  <p class="lead">
-					  <strong>Exemplo de integração de ferramentas para análise de churn.</strong></br>
-                      - Colab - ambiente de desenvolvimento.</br>
-					  - MLFlow - salvar os artefatos (parametros, graficos, etc...) gerados. </br>
-					  - Ngrok - compartilhar o desenvolvimento do app.</br>
-					  - Pycaret -  tratar, treinar os dados e avaliar os modelos.<br>
+					  <strong>Exemplo de integração de ferramentas para análise de Churn.</strong></br>
+                      Colab - ambiente de desenvolvimento.</br>
+					  MLFlow - salvar os artefatos (parametros, graficos, etc...) gerados. </br>
+					  Ngrok - compartilhar o desenvolvimento do app.</br>
+					  Pycaret -  tratar, treinar os dados e avaliar os modelos.<br>
                     </p>
                     </div>
                   </div>
