--- a/index.html
+++ b/index.html
@@ -194,7 +194,21 @@
               </h3>
               <!--<p class="subtitle-a">-->
 			  <p class="lead">
-                <strong>Através do uso de serviços de cloud, tais EC2, S3, Auto Scaling e outros, manter a infraestrutura de uma empresa.</strong>
+                <strong>Serviços de cloud utilizados</br>
+			    EC2</br>
+                S3</br>
+				IAM</br>
+				Ansible</br>
+				Auto Scaling</br>
+				Bean Stalk</br>
+				Redshift</br>
+				Terraform</br>
+				Load Balancer</br>
+				SNS</br>
+				RDS</br>
+				System Manager</br>
+				Metabase</br>
+				</strong>
 				<div class="line-mf"></div>
 			 </p> 
               
