--- a/index.html
+++ b/index.html
@@ -195,18 +195,12 @@
               <!--<p class="subtitle-a">-->
 			  <p class="lead">
                 <strong>Serviços de cloud utilizados</br>
-			    EC2</br>
-                S3</br>
-				IAM</br>
-				Ansible</br>
-				Auto Scaling</br>
-				Bean Stalk</br>
-				Redshift</br>
-				Terraform</br>
-				Load Balancer</br>
-				SNS</br>
-				RDS</br>
-				System Manager</br>
+			    EC2-S3</br>
+				IAM-Ansible</br>
+				Auto Scaling-Bean Stalk</br>
+				Redshift-Terraform</br>
+				Load Balancer-SNS</br>
+				RDS-System Manager</br>
 				Metabase</br>
 				</strong>
 				<div class="line-mf"></div>
