Added video Faker

--- a/index.html
+++ b/index.html
@@ -206,13 +206,14 @@
               <!--<p class="subtitle-a">-->
 			  <p class="lead">
                 <strong>Serviços de cloud utilizados</br>
-			    EC2-S3</br>
-				IAM-Ansible</br>
-				Auto Scaling-Bean Stalk</br>
-				Redshift-Terraform</br>
-				Load Balancer-SNS</br>
-				RDS-System Manager</br>
+			    EC2</br>S3</br>
+				IAM</br>Ansible</br>
+				Auto Scaling</br>Bean Stalk</br>
+				Redshift</br>Terraform</br>
+				Load Balancer</br>SNS</br>
+				RDS</br>System Manager</br>
 				Metabase</br>
+				Power BI</br>
 				</strong>
 				<div class="line-mf"></div>
 			 </p> 
@@ -220,7 +221,34 @@
             </div>
           </div>
         </div>
- 
+ <!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Gerar Dados de Vendas e Dashboard no Power BI</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">19/06/2023</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Usando a lib Faker criar dados sintéticos de vendas.<br>
+					  Salvar os dados num bucket da AWS.<br>
+					  Gerar um dashboard e atualizar sob demanda ou agendamento.<br>
+					  <strong>Serviços: Git Actions, S3, Iam e Power BI.</strong>
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "700" controls>
+                     <source src="assets/video/Faker.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
  <!--------------------------->
 
            <div class="work-content">
