--- a/index.html
+++ b/index.html
@@ -221,6 +221,37 @@
             </div>
           </div>
         </div>
+		
+		
+		
+		 <!--------------------------->
+
+           <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Criar tabelas no Redshift Serverless e gerar um dashboard com Metabase</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">AWS</span> / <span class="w-date">21/06/2023</span>
+					  <!--<p class="subtitle-a"> -->
+					  <p class="lead">
+                      Ler 5 arquivos csv a partir de um bucket.<br>
+					  Copiar as tabelas dentro do Redshift Serverless.<br>
+					  Gerar um dashboard com Metabase.<br>
+					  <strong>Serviços: S3, Iam, Redshift Serverless e Metabase.</strong>
+					</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <div class="work-box">
+                <div class="work-img">
+                  <video width="1100" height= "700" controls>
+                     <source src="assets/video/REDSHIFT04.mp4" type="video/mp4">
+                     Browser não suporta o tipo do video.
+                  </video>
+                </div>
+            </div>
  <!--------------------------->
 
            <div class="work-content">
