Added redhsfit video

--- a/index.html
+++ b/index.html
@@ -64,13 +64,16 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#blog">Raio-X</a>
-          </li>
-          <li class="nav-item">
+		 </li>
+		  <li class="nav-item">	
             <a class="nav-link js-scroll" href="#service">Artigos</a>
-          </li>
-          <li class="nav-item">
+		 </li>
+		  <li class="nav-item">	
             <a class="nav-link js-scroll" href="#contact">Contato</a>
           </li>
+		 <li class="nav-item">	
+            <a class="nav-link js-scroll" href="index.html">Home</a>
+          </li> 
         </ul>
       </div>
     </div>
@@ -86,7 +89,7 @@
           <h1 class="intro-title mb-4">Silvio Lima</h>
 		  <p class="intro-subtitle"><span class="text-slider-items">Cientista de Dados / Engenheiro de Dados / Engenheiro Cloud</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
-        </div>
+       </div>
       </div>
     </div>
   </div><!-- End Intro Section -->
