--- a/index.html
+++ b/index.html
@@ -784,8 +784,9 @@
                       <span class="w-ctegory">Regressão / Streamlit-Sharing</span> / <span class="w-date">08/07/2020</span>
 					  <!--<p class="subtitle-a"> -->
 					  <p class="lead">
-                      Projeto completo desde a coleta de dados, via scrap em sites de venda de apartamentos.<br>
-				      Tratamento dos dados, treinamento do modelo e deploy na nuvem.<br>
+                      Projeto que iniciou com a coleta de dados, via scrap em sites de venda de apartamentos.<br>
+				      Seguido pelo tratamento dos dados, treinamento do modelo e deploy na nuvem.<br>
+					  Veja em <strong>Artigos</strong> e <strong>Raio-X</strong>.
                     </p>
                     </div>
                   </div>
