--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
               <!--<p class="subtitle-a">-->
 			  <p class="lead">
 			  <strong>
+			    CrewAI</br>
 			    Linguagens: Python e R</br>
                 Web Scrap </br>
 				Análise Exploratória </br>
