Added CPQD e PUC

--- a/index.html
+++ b/index.html
@@ -166,12 +166,22 @@
                      <p class="lead">
                       <b>Busco uma oportunidade para iniciar carreira em Data Science e Cloud.</b> <br>
                       <br>
-                      Conclui em Janeiro de 2020 a <b>Formação Cientista de Dados na Data Sciency Academy - DSA</b>.<br>
-                      Conclui em Junho de 2022, a <b>Formação Inteligência Artificial aplicada a Medicina</b>.<br>
+					  <b>Em 2024 atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
+                      <br>
+					  <br>
+					  <b>Conclui em Janeiro de 2020 a Formação Cientista de Dados na Data Sciency Academy - DSA</b>.
+					  <br>
+					  <br>
+                      <b>Conclui em Junho de 2022, a Formação Inteligência Artificial aplicada a Medicina</b>.<br>
 		      <br>
 			 Treinamentos:<br>
-			 <strong>Bootcamp de Engenharia de Dados </br>- pela HowEdu - 08/2022 a 10/2022</strong><br>
-			 <strong>Bootcamp MultiCloud (AWS | Azure | GCP)</br>- pela TheCloudBootcamp - cursando</strong>
+			 <strong>Bootcamp de Machine Learning </br>- pela PUC Campinas - 08/2023 a 11/2023</strong>
+			 <br>
+			 <br>
+			 <strong>Bootcamp de Engenharia de Dados </br>- pela HowEdu - 08/2022 a 10/2022</strong>
+			 <br>
+			 <br>
+			 <strong>Bootcamp MultiCloud (AWS | Azure | GCP)</br>- pela TheCloudBootcamp </strong>
 		     </br><br>
 			 Certificações AWS:<br>
 			 <strong>- Cloud Practitioner</strong><br>
