--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 					  <b>Em 2024 atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
                       <br>
 					  <br>
-					  <b>Conclui em Janeiro de 2020 a Formação Cientista de Dados na Data Sciency Academy - DSA</b>.
+			                   <b>Fiz um Bootcamp de LLM e Inteligência Artificial pela Sooul Code Academy, com 740h. Concluído em Junho de 2025.</b>
+                                          <br>
+			                  <b>Conclui em Janeiro de 2020 a Formação Cientista de Dados na Data Sciency Academy - DSA</b>.
 					  <br>
 					  <br>
                       <b>Conclui em Junho de 2022, a Formação Inteligência Artificial aplicada a Medicina</b>.<br>
