--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                 <p class="lead">
                   Me chamo Silvio César De Lima, pós graduado em Business Intelligence pela universidade de Taubaté e Tecnólogo em Banco de Dados pela FATEC – SJC.<br>
                   Atuei por mais de 20 anos com suporte e treinamento Unix (Solaris).
+		          Cursando pós graduação em IA aplicada a Industria pela UniSENAI de Santa Catarina.			
                 </p>
                 <p class="lead">
                   Experiência com <b>Unix e Linux</b>.<br>
@@ -163,7 +164,9 @@
                   Serviços AWS:<br><b>EC2, S3, Athena, Sagemaker e outros</b>.<br>
                 </p>
                 <p class="lead">
-                  <b>Busco uma oportunidade para iniciar carreira em Data Science e Cloud.</b> <br>
+                  <b>Em Novembro de 2025, iniciei uma Residência e Pós graduação em IA Aplicada a Industria pela UniSENAI de Santa Catarina.</b>
+				  <r>Em Agosto, iniciei uma residência em dados pela ECOA/PUC-RJ onde me aprofundei no uso do Looker e melhores práticas de visualização de dados.</b>
+				  <b>De Janeiro a Maio cursei um Bootcamp em LLM pela Soulcode. O projeto final foi um assistente virtual para disciplinas ministradas no site da Soulcode.</b>
                   <br>
                   <b>Em 2024 atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
                   <br>
@@ -537,7 +540,7 @@
 					  <p class="lead">
 					  <strong>Agentes Inteligentes.</br>
                       Analisar dados históricos de ações na B3. O Prophet faz a previsão de 6 meses e apresenta os gráficos.
-					  Um agente usando Gemini-flash analisa as previsões.</br>
+					  Um agente do GROQ analisa as previsões.</br>
 					  </strong>
                     </p>
                     </div>
@@ -2154,3 +2157,4 @@
 </body>
 
 </html>
+
