--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
                   </h5>
                 </div>
                 <p class="lead">
-                  <b>Me chamo Silvio César De Lima, pós graduado em Business Intelligence pela universidade de Taubaté e Tecnólogo em Banco de Dados pela FATEC – SJC.</b><br>
-                  <b>Atuei por mais de 20 anos com suporte e treinamento Unix (Solaris).</b><br>
+                  <b>Me chamo Silvio César De Lima, pós graduado em Business Intelligence pela universidade de Taubaté e Tecnólogo em Banco de Dados pela FATEC – SJC.</b>
+				<br>
+                  <b>Atuei por mais de 20 anos com suporte e treinamento Unix (Solaris).</b>
+				<br>
 		          <b>Cursando pós graduação em IA aplicada a Industria pela UniSENAI de Santa Catarina.</b>		
                 </p>
                 <p class="lead">
@@ -2157,5 +2159,6 @@
 </body>
 
 </html>
+
 
 
