--- a/index.html
+++ b/index.html
@@ -166,17 +166,17 @@
                   Serviços AWS:<br><b>EC2, S3, Athena, Sagemaker e outros</b>.<br>
                 </p>
                 <p class="lead">
-                  <b>Em Novembro de 2025, iniciei uma Residência e Pós graduação em IA Aplicada a Industria pela UniSENAI de Santa Catarina.</b>
-				  <r>Em Agosto, iniciei uma residência em dados pela ECOA/PUC-RJ onde me aprofundei no uso do Looker e melhores práticas de visualização de dados.</b>
-				  <b>De Janeiro a Maio cursei um Bootcamp em LLM pela Soulcode. O projeto final foi um assistente virtual para disciplinas ministradas no site da Soulcode.</b>
+                  <b> - Novembro de 2025: Residência e Pós graduação em IA Aplicada a Industria pela UniSENAI de Santa Catarina.</b>
+				  <r> - Agosto a Novembro: Residência em dados pela ECOA/PUC-RJ onde me aprofundei no uso do Looker e melhores práticas de visualização de dados.</b>
+				  <b> - Janeiro a Maio: Bootcamp em LLM pela Soulcode. O projeto final foi um assistente virtual para disciplinas ministradas no site da Soulcode.</b>
                   <br>
-                  <b>Em 2024 atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
-                  <br>
-                  <br>
-                  <b>Conclui em Janeiro de 2020 a Formação Cientista de Dados na Data Sciency Academy - DSA</b>.
+                  <b> - 2024 atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
                   <br>
                   <br>
-                  <b>Conclui em Junho de 2022, a Formação Inteligência Artificial aplicada a Medicina</b>.<br>
+                  <b> - Janeiro de 2020: concluí a Formação Cientista de Dados na Data Sciency Academy - DSA</b>.
+                  <br>
+                  <br>
+                  <b> - Junho de 2022: concluí a Formação Inteligência Artificial aplicada a Medicina</b>.<br>
                   <br>
                   Treinamentos:<br>
                   <strong>Bootcamp de Machine Learning </br>- pela PUC Campinas - 08/2023 a 11/2023</strong>
@@ -2159,6 +2159,7 @@
 </body>
 
 </html>
+
 
 
 
