--- a/index.html
+++ b/index.html
@@ -166,10 +166,11 @@
                   Serviços AWS:<br><b>EC2, S3, Athena, Sagemaker e outros</b>.<br>
                 </p>
                 <p class="lead">
-				  <b>2025>	
+				  <b>2025>
+					  <br>
                   <b> - Novembro de 2025: Residência e Pós graduação em IA Aplicada a Industria pela UniSENAI de Santa Catarina.</b>
 				    <br>
-				  <r> - Agosto a Novembro: Residência em dados pela ECOA/PUC-RJ onde me aprofundei no uso do Looker e melhores práticas de visualização de dados.</b>
+				  <b> - Agosto a Novembro: Residência em dados pela ECOA/PUC-RJ onde me aprofundei no uso do Looker e melhores práticas de visualização de dados.</b>
 					<br>
 				  <b> - Janeiro a Maio: Bootcamp em LLM pela Soulcode. O projeto final foi um assistente virtual para disciplinas ministradas no site da Soulcode.</b>
                   <br>
@@ -2162,6 +2163,7 @@
 </body>
 
 </html>
+
 
 
 
