--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
 					<br>
 				  <b> - Janeiro a Maio: Bootcamp em LLM pela Soulcode. O projeto final foi um assistente virtual para disciplinas ministradas no site da Soulcode.</b>
                   <br>
-                  <b> - 2024 atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
+				  <b>2024></b>	
+                  <b> - Atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
                   <br>
                   <br>
 				    <b>2020</b>	
@@ -2164,6 +2165,7 @@
 </body>
 
 </html>
+
 
 
 
