--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                   Serviços AWS:<br><b>EC2, S3, Athena, Sagemaker e outros</b>.<br>
                 </p>
                 <p class="lead">
-				  <b>2025</b>
+				  <strong>2025</strong>
 					  <br>
                   <b> - Novembro de 2025: Residência e Pós graduação em IA Aplicada a Industria pela UniSENAI de Santa Catarina.</b>
 				    <br>
@@ -174,7 +174,8 @@
 					<br>
 				  <b> - Janeiro a Maio: Bootcamp em LLM pela Soulcode. O projeto final foi um assistente virtual para disciplinas ministradas no site da Soulcode.</b>
                   <br>
-				  <b>2024></b>	
+				  <strong>2024></strong>
+				 <br>	
                   <b> - Atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
                   <br>
                   Treinamentos:<br>
@@ -2158,6 +2159,7 @@
 </body>
 
 </html>
+
 
 
 
