--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					<br>
 				  <b> - Janeiro a Maio: Bootcamp em LLM pela Soulcode. O projeto final foi um assistente virtual para disciplinas ministradas no site da Soulcode.</b>
                   <br>
-				  <strong>2024></strong>
+				  <strong>2024</strong>
 				 <br>	
                   <b> - Atuei como Bolsista de uma Residência Tecnológica no CPQD. Onde desenvolvi um projeto de Análise de Sentimento Baseada em Aspectos.</b>
                   <br>
@@ -2159,6 +2159,7 @@
 </body>
 
 </html>
+
 
 
 
